Fixed responsive problems on mobile

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -55,6 +55,7 @@ h1,h2,h3,h4,h5,h6 {
     font-family: 'Dancing Script', cursive;
     font-weight: bold;
     font-size: 20vw;
+    margin-bottom: 0.2em;
   }
 
   #redblockbot{
@@ -67,6 +68,7 @@ h1,h2,h3,h4,h5,h6 {
     height: 5em;
     position: relative;
     display: table;
+    border-radius: 0em 0em 0.95em 0.95em;
   }
 
   #image{
@@ -78,7 +80,7 @@ h1,h2,h3,h4,h5,h6 {
   }
   #about{
     margin-top: 2em;
-    color: $primary-color-dark;
+    //color: $primary-color-dark;
     h5{
       font-weight: lighter;
       font-size: 1.75em;
@@ -137,6 +139,7 @@ h1,h2,h3,h4,h5,h6 {
       font-family: 'Dancing Script', cursive;
       font-weight: bold;
       font-size: 8em;
+      margin-bottom: 0.2em;
     }
 
     #redblockbot{
@@ -159,8 +162,6 @@ h1,h2,h3,h4,h5,h6 {
       }
     }
     #about{
-      margin-top: 4em;
-      color: $primary-color-dark;
       h5{
         font-weight: lighter;
         font-size: 1.75em;
